# mllint

./: .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  .goreleaser.yml  404.html  Dockerfile  Makefile  ReadMe.md  build.sh  clean.sh  codecov.yml  go.mod  go.sum  index.html  index.json  index.xml  main.go  mockgen.sh  pylintrc  robots.txt  sitemap.xml  test.package.sh  test.sh
.github/workflows/: build-publish.yml  build.yml  gh-pages.yml  publish.yml
about/: index.html
api/: api_test.go  category.go  category_test.go  cqlinters.go  depmanagers.go  depmanagers_test.go  issue.go  issue_test.go  linter.go  linter_test.go  project.go  report.go  results.go  rule.go  util.go  util_test.go
api/categories/: categories.go
api/mock_api/: cqlinters.go  depmanagers.go  linter.go
assets/css/: stylesheet.min.2ccc4c0427fed56ea6a0922719943a3539814663f49592d51fe456d648263cb0.css  (+1 more)
categories/: categories.go  index.html  index.xml
commands/: config.go  describe.go  flags.go  list.go  render.go  root.go  run.go  util.go  version.go
config/: config.go  config_test.go
docs/: create-demo-svg.sh  demo-colors.colorscheme  demo-script.sh  evaluation-model.md  example-report.md  index.html  index.xml
docs/rules/: index.xml  (+1 more)
linters/: linters.go  linters_test.go
linters/dependencymgmt/test-resources/dev-dependencies/poetry/invalid/: pyproject.toml
projectlinters/: all.go  all_test.go  dependencies.go  dependencies_test.go  dvc.go  dvc_test.go  git.go  git_test.go
search/: index.html
tags/: index.html  index.xml
utils/: cli.go  errors.go  files.go  files_test.go
(+204 files in other folders)
