[tool.poetry]
name = "mllint-test-project"
version = "0.1.0"
description = "Test project for mllint"
authors = ["Bart van Oort <bart@vanoort.is>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.3"
pyaml = "^20.4.0"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
pytest = "*"
tox = "*"

[tool.poetry.dev-dependencies]
mllint = "^0.5.1"
dvc = "^2.0.5"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
